Fix cover on mobile

--- a/html/css/minimal.css
+++ b/html/css/minimal.css
@@ -1,3 +1,6 @@
+html {
+	height: 100%;
+}
 body {
 	background-color: black;
 	/*background: url(bg.jpg) no-repeat center center fixed;*/
